[project]
name = "lunar-lander-reinforcement-genetic-policy-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]>=0.28",
    "imageio>=2.37.0",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
]
